--- a/ArrayTest0318/ArrayTest0318/ArrayTest0318.vcxproj.filters
+++ b/ArrayTest0318/ArrayTest0318/ArrayTest0318.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="PascalTeiangle.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="RecursiveFunction.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
