--- a/ArrayTest0318/ArrayTest0318/ArrayTest0318.vcxproj.filters
+++ b/ArrayTest0318/ArrayTest0318/ArrayTest0318.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="03_31.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="04_12stack.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
