--- a/ArrayTest0318/ArrayTest0318/ArrayTest0318.vcxproj.filters
+++ b/ArrayTest0318/ArrayTest0318/ArrayTest0318.vcxproj.filters
@@ -42,5 +42,11 @@
     <ClCompile Include="04_14stack-1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="04_14stack-3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="04_19stack.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
