--- a/ArrayTest0318/ArrayTest0318/ArrayTest0318.vcxproj.filters
+++ b/ArrayTest0318/ArrayTest0318/ArrayTest0318.vcxproj.filters
@@ -48,5 +48,11 @@
     <ClCompile Include="04_19stack.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="04_21linkList.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="04_22linkedList.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
