--- a/ArrayTest0318/ArrayTest0318/ArrayTest0318.vcxproj.filters
+++ b/ArrayTest0318/ArrayTest0318/ArrayTest0318.vcxproj.filters
@@ -54,5 +54,8 @@
     <ClCompile Include="04_22linkedList.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="04_24queue.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
